# stacosys

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  Vagrantfile  build.sh  config.ini  config.json  config.py  dbmigrate.py  flake8.ini  nuitka-package.config.yml  pyproject.toml  requirements.txt  run.py  run.sh  stacosys.spec  stacosys.sublime-project  stacosys.sublime-workspace  tox.ini  whitelist.txt
.github/workflows/: docker.yml  lint.yml  main.yml  pyinstaller.yml  pytest  pytest.yml
app/: __init__.py  run.py  server.py  stacosys.py
app/conf/: config.py  schema.py
app/controllers/: api.py  form.py  mail.py  reader.py
app/core/: __init__.py  cron.py  database.py  mailer.py  processor.py  rss.py  templater.py
app/helper/: hashing.py
app/helpers/: hashing.py
app/interface/: api.py  form.py  mail.py  reader.py  report.py  rmqclient.py  zclient.py
app/model/: comment.py  site.py
app/models/: comment.py  reader.py  report.py  site.py
app/services/: database.py  processor.py
app/templates/en/: approve_comment.tpl  drop_comment.tpl  new_comment.tpl  notify_reader.tpl  notify_subscriber.tpl  report.tpl  report_message.tpl  rss_title_message.tpl  unsubscribe_page.tpl
app/templates/fr/: approve_comment.tpl  drop_comment.tpl  new_comment.tpl  notify_reader.tpl  notify_subscriber.tpl  report.tpl  report_message.tpl  rss_title_message.tpl  unsubscribe_page.tpl
app/util/: rabbit.py
dbmigration/: create_empty_db.py  migrate_from_1.1_to_2.0.py  migrate_from_2.1_to_3.0.py
demo/: app.js  package.json
demo/public/: index.html  redirect.html
demo/public/css/: font-awesome.css  style.css
docker/: docker-init.sh
go-http/: config.json  httpfastcache.go  httpserver.go
src/stacosys/: __init__.py  run.py
stacosys/: run.py
stacosys/conf/: config.py
stacosys/core/: cron.py  database.py  imap.py  mailer.py  persistence.py  rss.py  templater.py
stacosys/db/: __init__.py  dao.py  database.py
stacosys/interface/: __init__.py  api.py  form.py  scheduler.py  webadmin.py
stacosys/model/: comment.py  email.py  site.py
stacosys/service/: __init__.py  configuration.py  mail.py  rssfeed.py
tests/: test_api.py  test_config.py  test_db.py  test_form.py  test_imap.py  test_mail.py  test_persistence.py  test_rssfeed.py  test_stacosys.py  test_templater.py
tools/: config.json  pecosys2stacosys.py
vagrant/: Vagrantfile
(+32 files in other folders)
