[project]
name = "stacosys"
version = "3.3"
description = "STAtic COmmenting SYStem"
authors = [
    { name = "Yax" }
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "pyrss2gen>=1.1",
    "markdown>=3.5.1",
    "requests>=2.31.0",
    "background>=0.2.1",
    "Flask>=3.0.0",
    "types-markdown>=3.5.0.1",
    "pydal>=20230521.1"
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pylint>=3.0.2",
    "mypy>=1.6.1",
    "pytest>=7.4.3",
    "coveralls>=3.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.10.1",
    "pyinstaller>=6.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
