[project]
name = "stacosys"
version = "3.4"
description = "STAtic COmmenting SYStem"
readme = "README.md"
authors = [
    { name = "Yax" }
]
requires-python = ">=3.13.1"
dependencies = [
    "background>=0.2.1",
    "flask>=3.1.0",
    "markdown>=3.7",
    "pydal>=20241204.1",
    "pyrss2gen>=1.1",
    "requests>=2.32.3",
    "types-markdown>=3.7.0.20241204",
]

[dependency-groups]
dev = [
    "coveralls>=4.0.1",
    "mypy>=1.13.0",
    "pylint>=3.3.2",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "black>=24.10.0",
]
